[gd_scene format=3]

[ext_resource type="Script" path="res://ui/menus/LevelSelectScene.gd" id="1_script"]
[ext_resource type="Theme" path="res://ui/menus/NightSkyTheme.tres" id="5_theme"]
[ext_resource type="Shader" path="res://shaders/menu_background.gdshader" id="2_sky"]
[ext_resource type="Shader" path="res://shaders/menu_ground.gdshader" id="3_gnd"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="4_vig"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sky"]
shader = ExtResource("2_sky")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gnd"]
shader = ExtResource("3_gnd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vig"]
shader = ExtResource("4_vig")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_info_panel"]
bg_color = Color(0.08, 0.08, 0.18, 0.7)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.35, 0.6, 0.4)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[node name="LevelSelectScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_theme")
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
material = SubResource("ShaderMaterial_sky")
color = Color(0.1, 0.06, 0.16, 1)

[node name="GroundOverlay" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
material = SubResource("ShaderMaterial_gnd")
color = Color(1, 1, 1, 1)

[node name="StarCanvas" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_right = 120.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.95)
theme_override_colors/font_shadow_color = Color(0.2, 0.3, 0.6, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 42
text = "SELECT LEVEL"

[node name="InfoPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_info_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2

[node name="LevelNameLabel" type="Label" parent="InfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
text = "Awakening"

[node name="LevelStatusLabel" type="Label" parent="InfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
text = "Ready"

[node name="PlayPromptLabel" type="Label" parent="InfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
text = "Press ENTER or SPACE to play"

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 50.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "BACK"

[node name="VignetteOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
material = SubResource("ShaderMaterial_vig")
color = Color(1, 1, 1, 1)
